<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#808080"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc1"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc2"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc3"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc4"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc4"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc5"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc6"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc6"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc7"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc7"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc8"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc8"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc9"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc9"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc10"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc10"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc11"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc11"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc12"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc12"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc13"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc13"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc14"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc15"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc15"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc16"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc17"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc17"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc18"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc19"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc19"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc20"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc21"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc21"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc22"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc22"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc23"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc23"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc24"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc24"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc25"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc25"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc26"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc26"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc27"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc27"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc28"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc28"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc29"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc29"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc30"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc30"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc31"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc31"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc32"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc32"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc33"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc33"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc34"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc34"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc35"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc35"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc36"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc36"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc37"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc37"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc38"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc38"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc39"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc39"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc40"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc40"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc41"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc41"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc42"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc42"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc43"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:id="@+id/acc43"/>

    </LinearLayout>

</ScrollView>